[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint.messages_control]
max-line-length = 88
disable = [
  "invalid-name",
  "missing-function-docstring",
  "missing-module-docstring",
  "protected-access",
  "too-many-locals",
  "import-error",
]
