[metadata]
name = cleanplotlib
version = 0.1.2
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Clean line plots
url = https://github.com/nschloe/cleanplotlib
project_urls =
    Code=https://github.com/nschloe/cleanplotlib
    Issues=https://github.com/nschloe/cleanplotlib/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
platforms = any
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
packages = find:
# importlib_metadata can be removed when we support Python 3.8+ only
install_requires =
    importlib_metadata
    matplotlib
python_requires = >=3.5
setup_requires =
    setuptools>=42
    wheel
