[metadata]
name = dufte
version = 0.2.19
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Clean matplotlib plots
url = https://github.com/nschloe/dufte
project_urls =
    Code=https://github.com/nschloe/dufte
    Issues=https://github.com/nschloe/dufte/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:
install_requires =
    matplotlib
    numpy
python_requires = >=3.6

[options.packages.find]
where=src
